[gd_scene load_steps=10 format=3 uid="uid://cjh26ulrd1y23"]

[ext_resource type="Script" uid="uid://cwvuuigu1ucs3" path="res://scene/UI/end_screen.gd" id="1_iyald"]
[ext_resource type="PackedScene" uid="uid://bkvvm3rsbnbqy" path="res://scene/UI/sound_button.tscn" id="2_eroqu"]
[ext_resource type="Texture2D" uid="uid://b6pwr1wnipjwg" path="res://assets/coin_anim_f0.png" id="2_seueg"]
[ext_resource type="AudioStream" uid="uid://0fms1s1y86lv" path="res://assets/audio/jungles/victory2.ogg" id="3_ssjoa"]
[ext_resource type="AudioStream" uid="uid://sufw0sayhbai" path="res://assets/audio/jungles/game_over3.ogg" id="4_seueg"]

[sub_resource type="Animation" id="Animation_l4qqo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5uhh8"]
resource_name = "in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_plkwo"]
resource_name = "out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l4qqo"]
_data = {
&"RESET": SubResource("Animation_l4qqo"),
&"in": SubResource("Animation_5uhh8"),
&"out": SubResource("Animation_plkwo")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_iyald")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l4qqo")
}
autoplay = "in"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.30588236, 0.4509804, 0.4392157, 0.43137255)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NameLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"

[node name="RecordTime" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Record:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_seueg")
expand_mode = 3

[node name="GoldTextLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold + 1"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_eroqu")]
layout_mode = 2
text = "Restart"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_eroqu")]
layout_mode = 2
text = "Quit to Menu"

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ssjoa")
volume_db = -5.0
bus = &"SFX"

[node name="DefeatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_seueg")
volume_db = -5.0
bus = &"SFX"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
